# OBC-ERC-RPI

./: .gitignore  README.md
src/arm_build/: package.xml  setup.cfg  setup.py
src/arm_build/arm_build/: inv_kin.py  inverse_kinematics.py  keyboard_arm.py  servo_command_node.py
src/arm_build/config/: arm.urdf copy.xacro
src/arm_build/launch/: moveit_with_control.launch.py  testing.launch.py
src/arm_build/test/: test_arm.urdf
src/arm_build/urdf/: arm.urdf.xacro  arm_control.urdf.xacro
src/arm_test/: .setup_assistant  CMakeLists.txt  package.xml
src/arm_test/config/: controllers.yaml  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  my_robot_arm.ros2_control.xacro  my_robot_arm.srdf  my_robot_arm.urdf.xacro
src/arm_test/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/erc_build/: package.xml  setup.cfg  setup.py
src/erc_build/erc_build/: comms.dbc  encoder_node.py  keyboard_control.py  raspistatechecker.py  remote_messages_node.py  roboclaw_node.py  servo_control.py  steering.py  steering_node.py
src/erc_build/launch/: rover_motion.launch.py
src/roboticArm/src/: README.md
src/roboticArm/src/hello_moveit/: package.xml
src/roboticArm/src/hello_moveit/src/: hello_moveit.cpp
src/roboticArm/src/rover_arm_description/: CMakeLists.txt  package.xml
src/roboticArm/src/rover_arm_description/config/: display.rviz
src/roboticArm/src/rover_arm_description/launch/: display.launch.py  test2.launch.py
src/roboticArm/src/rover_arm_description/urdf/: robot_simple.urdf
src/roboticArm/src/rover_arm_description/urdf/old_urdf/: robot.xacro  robot_old.urdf  robot_simple.xacro  rover_arm.urdf.xacro
src/roboticArm/src/rover_arm_moveit_auto_config/: .setup_assistant  CMakeLists.txt  package.xml  setup.py
src/roboticArm/src/rover_arm_moveit_auto_config/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  my_robot_arm.ros2_control.xacro  my_robot_arm.srdf  my_robot_arm.urdf.xacro  ros2_controllers.yaml
src/roboticArm/src/rover_arm_moveit_auto_config/launch/: bringup.launch.py  demo.launch.py  move_group.launch.py  moveit_planning.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  target_pose_publisher.py  warehouse_db.launch.py
src/roboticArm/src/rover_arm_moveit_auto_config/rover_arm_moveit_auto_config/: arm_controller.py  move_arm_example.py
src/roboticArm/src/rover_arm_moveit_auto_config/urdf/: robot_simple.xacro
src/sim_mdrs/sim_mdrs/: diff_controller.py  raspistatechecker.py  telem_node.py
src/testing/: ina.py  motor_verify.py  roboclaw_driver.py
(+16 files in other folders)
